--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   push:
-    branches: ["main", "main-patch"]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -78,14 +78,11 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
           SKIP_WHIPTAIL: 1
         run: |
-          # Build architecture-independent package (same for all architectures)
-          # No cross-compilation needed for Architecture: all packages
           dpkg-buildpackage -us -uc
           sudo apt install -f -y
 
       - name: Lint package
         run: |
-          # Run lintian to check package quality
           deb_file=$(ls ../*.deb | head -n 1)
           lintian "$deb_file" || echo "Lintian warnings found, but continuing..."
 
@@ -96,13 +93,8 @@ jobs:
           version="${raw_tag#v}"
           deb_file=$(ls ../*.deb | head -n 1)
 
-          # Create architecture-specific name for this matrix job
           arch_name="hardn_${version}_${{ matrix.arch }}.deb"
-
-          # Create directory for this architecture
           mkdir -p release_assets/deb-${{ matrix.arch }}
-
-          # Copy the .deb file with architecture-specific name
           cp "$deb_file" "release_assets/deb-${{ matrix.arch }}/$arch_name"
 
           echo "arch_deb=release_assets/deb-${{ matrix.arch }}/$arch_name" >> $GITHUB_OUTPUT
@@ -119,7 +111,7 @@ jobs:
     strategy:
       matrix:
         arch: [amd64, arm64]
-        distro: [debian, centos]
+        distro: [debian]
     steps:
       - name: Register QEMU emulation
         uses: docker/setup-qemu-action@v3
@@ -140,129 +132,69 @@ jobs:
           echo "Simulating full install for ${{ matrix.arch }} on ${{ matrix.distro }}"
           cp release_assets/deb-${{ matrix.arch }}/*.deb ./hardn.deb
           mkdir -p ./logbundle/hardn-ci-${{ matrix.distro }}
-          
-          # Set proper permissions on log directory before mounting
+
           chmod 777 ./logbundle
           chmod 777 ./logbundle/hardn-ci-${{ matrix.distro }}
 
-          if [ "${{ matrix.distro }}" = "debian" ]; then
-            # Debian/Ubuntu test (existing)
-            docker run --rm -i --platform linux/${{ matrix.arch }} \
-              --privileged \
-              -e SKIP_WHIPTAIL=1 \
-              -e DEBIAN_FRONTEND=noninteractive \
-              -e CI=true \
-              -v "$(pwd)/hardn.deb:/tmp/hardn.deb" \
-              -v "$(pwd)/logbundle:/var/log/" \
-              debian:stable-slim bash -euxo pipefail -c '
-                apt-get update
-                apt-get install -y sudo bash gnupg curl whiptail coreutils zip alien
-                dpkg -i /tmp/hardn.deb || true
-                apt-get install -f -y
-                chmod +x /usr/lib/hardn-xdr/src/setup/modules/*.sh || true
-                
-                # Ensure log directory has proper permissions
-                mkdir -p /var/log/hardn-ci-debian
-                chmod 777 /var/log/hardn-ci-debian
-                
-                echo "Running HARDN-XDR"
-                /usr/bin/hardn-xdr > /var/log/hardn-ci-debian/hardn-xdr.log 2>&1 || echo "HARDN-XDR exited"
+          docker run --rm -i --platform linux/${{ matrix.arch }} \
+            --privileged \
+            -e SKIP_WHIPTAIL=1 \
+            -e DEBIAN_FRONTEND=noninteractive \
+            -e CI=true \
+            -v "$(pwd)/hardn.deb:/tmp/hardn.deb" \
+            -v "$(pwd)/logbundle:/var/log/" \
+            debian:stable-slim bash -euxo pipefail -c '
+              apt-get update
+              apt-get install -f -y
+              dpkg -i /tmp/hardn.deb || true
+              apt-get install -f -y
+              chmod +x /usr/lib/hardn-xdr/src/setup/modules/*.sh || true
 
-                echo "Running modules"
-                fail_count=0
-                total_count=0
-                for script in /usr/lib/hardn-xdr/src/setup/modules/*.sh; do
-                  if [ -f "$script" ]; then
-                    name=$(basename "$script")
-                    total_count=$((total_count+1))
-                    echo "[$total_count] Running: $name" | tee -a /var/log/hardn-ci-debian/modules.log
-                    if timeout 300 bash "$script" > /var/log/hardn-ci-debian/$name.log 2>&1; then
-                      echo "[$total_count] PASS: $name" | tee -a /var/log/hardn-ci-debian/modules.log
-                    else
-                      exit_code=$?
-                      echo "[$total_count] FAIL: $name (exit code: $exit_code)" | tee -a /var/log/hardn-ci-debian/modules.log
-                      fail_count=$((fail_count+1))
-                    fi
-                  fi
-                done
-                echo "Total modules: $total_count" | tee -a /var/log/hardn-ci-debian/modules.log
-                echo "Total failures: $fail_count" | tee -a /var/log/hardn-ci-debian/modules.log
-                echo "$fail_count" > /var/log/hardn-ci-debian/fail_count.txt
-                echo "$total_count" > /var/log/hardn-ci-debian/total_count.txt
-                
-                # Set world-readable permissions on all log files
-                find /var/log/hardn-ci-debian -type f -exec chmod 644 {} \;
-                find /var/log/hardn-ci-debian -type d -exec chmod 755 {} \;
-              '
-          else
-            # CentOS/RHEL test (RPM-based)
-            docker run --rm -i --platform linux/${{ matrix.arch }} \
-              --privileged \
-              -e SKIP_WHIPTAIL=1 \
-              -e CI=true \
-              -v "$(pwd)/hardn.deb:/tmp/hardn.deb" \
-              -v "$(pwd)/logbundle:/var/log/" \
-              quay.io/centos/centos:stream9 bash -euxo pipefail -c '
-                dnf update -y
-                dnf install -y sudo bash gnupg2 curl newt zip alien coreutils
-                
-                # Convert DEB to RPM and install
-                alien --to-rpm --scripts /tmp/hardn.deb
-                rpm -ivh *.rpm || true
-                
-                # Ensure permissions are set correctly after RPM install
-                chmod +x /usr/lib/hardn-xdr/src/setup/modules/*.sh || true
-                
-                # Ensure log directory has proper permissions
-                mkdir -p /var/log/hardn-ci-centos
-                chmod 777 /var/log/hardn-ci-centos
-                
-                echo "Running HARDN-XDR"
-                /usr/bin/hardn-xdr > /var/log/hardn-ci-centos/hardn-xdr.log 2>&1 || echo "HARDN-XDR exited"
+              mkdir -p /var/log/hardn-ci-debian
+              chmod 777 /var/log/hardn-ci-debian
 
-                echo "Running modules on CentOS/RHEL"
-                fail_count=0
-                total_count=0
-                for script in /usr/lib/hardn-xdr/src/setup/modules/*.sh; do
-                  if [ -f "$script" ]; then
-                    name=$(basename "$script")
-                    total_count=$((total_count+1))
-                    echo "[$total_count] Running: $name" | tee -a /var/log/hardn-ci-centos/modules.log
-                    if timeout 300 bash "$script" > /var/log/hardn-ci-centos/$name.log 2>&1; then
-                      echo "[$total_count] PASS: $name" | tee -a /var/log/hardn-ci-centos/modules.log
-                    else
-                      exit_code=$?
-                      echo "[$total_count] FAIL: $name (exit code: $exit_code)" | tee -a /var/log/hardn-ci-centos/modules.log
-                      fail_count=$((fail_count+1))
-                    fi
+              echo "Running HARDN-XDR"
+              /usr/bin/hardn-xdr > /var/log/hardn-ci-debian/hardn-xdr.log 2>&1 || echo "HARDN-XDR exited"
+
+              echo "Running modules"
+              fail_count=0
+              total_count=0
+              for script in /usr/lib/hardn-xdr/src/setup/modules/*.sh; do
+                if [ -f "$script" ]; then
+                  name=$(basename "$script")
+                  total_count=$((total_count+1))
+                  echo "[$total_count] Running: $name" | tee -a /var/log/hardn-ci-debian/modules.log
+                  if timeout 300 bash "$script" > /var/log/hardn-ci-debian/$name.log 2>&1; then
+                    echo "[$total_count] PASS: $name" | tee -a /var/log/hardn-ci-debian/modules.log
+                  else
+                    exit_code=$?
+                    echo "[$total_count] FAIL: $name (exit code: $exit_code)" | tee -a /var/log/hardn-ci-debian/modules.log
+                    fail_count=$((fail_count+1))
                   fi
-                done
-                echo "Total modules: $total_count" | tee -a /var/log/hardn-ci-centos/modules.log
-                echo "Total failures: $fail_count" | tee -a /var/log/hardn-ci-centos/modules.log
-                echo "$fail_count" > /var/log/hardn-ci-centos/fail_count.txt
-                echo "$total_count" > /var/log/hardn-ci-centos/total_count.txt
-                
-                # Set world-readable permissions on all log files
-                find /var/log/hardn-ci-centos -type f -exec chmod 644 {} \;
-                find /var/log/hardn-ci-centos -type d -exec chmod 755 {} \;
-              '
-          fi
+                fi
+              done
+
+              echo "Total modules: $total_count" | tee -a /var/log/hardn-ci-debian/modules.log
+              echo "Total failures: $fail_count" | tee -a /var/log/hardn-ci-debian/modules.log
+              echo "$fail_count" > /var/log/hardn-ci-debian/fail_count.txt
+              echo "$total_count" > /var/log/hardn-ci-debian/total_count.txt
+
+              find /var/log/hardn-ci-debian -type f -exec chmod 644 {} \;
+              find /var/log/hardn-ci-debian -type d -exec chmod 755 {} \;
+            '
 
           mkdir -p release_assets/hardn-logs-${{ matrix.arch }}-${{ matrix.distro }}
           cp -r ./logbundle/* release_assets/hardn-logs-${{ matrix.arch }}-${{ matrix.distro }}/ || true
-          
-          # Output detailed information about test results
+
           log_dir="release_assets/hardn-logs-${{ matrix.arch }}-${{ matrix.distro }}/hardn-ci-${{ matrix.distro }}"
           if [ -f "$log_dir/total_count.txt" ]; then
             total_modules=$(cat "$log_dir/total_count.txt")
             echo "Total modules tested: $total_modules"
           fi
-          
           if [ -f "$log_dir/fail_count.txt" ]; then
             failed_modules=$(cat "$log_dir/fail_count.txt")
             echo "Failed modules: $failed_modules"
           fi
-
           echo "passed=false" >> $GITHUB_OUTPUT
           if [ -f "$log_dir/fail_count.txt" ] && grep -q '^0$' "$log_dir/fail_count.txt"; then
             echo "passed=true" >> $GITHUB_OUTPUT
@@ -288,8 +220,6 @@ jobs:
       - name: Check deployment results
         id: check
         run: |
-          # If we get here, all test-deployment matrix jobs succeeded
-          # (GitHub Actions fails the workflow if any matrix job fails)
           echo "passed=true" >> $GITHUB_OUTPUT
 
   release:
@@ -307,35 +237,31 @@ jobs:
 
       - name: Copy logo into release
         run: |
-           mkdir -p release_assets
-           if [ -f "docs/assets/sig_logo.png" ]; then
-             cp "docs/assets/sig_logo.png" release_assets/sig_logo.png
-           else
-             echo "Warning: Logo file not found, creating placeholder"
-             echo "HARDN-XDR Logo not available" > release_assets/sig_logo.txt
-           fi
+          mkdir -p release_assets
+          if [ -f "docs/assets/sig_logo.png" ]; then
+            cp "docs/assets/sig_logo.png" release_assets/sig_logo.png
+          else
+            echo "Warning: Logo file not found, creating placeholder"
+            echo "HARDN-XDR Logo not available" > release_assets/sig_logo.txt
+          fi
 
       - name: Create GitHub Release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           tag="${{ needs.build-and-test.outputs.new_tag }}"
-
-          # Check if logo exists and prepare release files
           release_files=(
             release_assets/deb-amd64/*.deb
             release_assets/deb-arm64/*.deb
             release_assets/hardn-logs-zip/hardn_logs_bundle_*.zip
           )
-
           if [ -f "release_assets/sig_logo.png" ]; then
             release_files+=(release_assets/sig_logo.png)
             logo_note="![HARDN-XDR Logo](sig_logo.png)\n\n"
           else
             logo_note=""
           fi
-
           gh release create "$tag" \
             "${release_files[@]}" \
             --title "Release $tag" \
-            --notes "${logo_note}Multi-architecture release (AMD64/ARM64) with comprehensive testing on Debian/Ubuntu and CentOS/RHEL systems."
+            --notes "${logo_note}Multi-architecture Debian-only release (AMD64/ARM64) with full test logs."
