--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,11 +1,13 @@
-name: Deploy GitHub Pages
+# Disabled - using jekyll-gh-pages.yml instead
+name: Deploy GitHub Pages (Disabled)
 
 on:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: '0 5 * * 5'  # Weekly traffic badge updates (Fridays at 5 AM UTC)
-  workflow_dispatch:
+  workflow_dispatch: # Manual trigger only
+  # Disabled automatic triggers to avoid conflict with jekyll-gh-pages.yml
+  # push:
+  #   branches: [ main ]
+  # schedule:
+  #   - cron: '0 5 * * 5'
 
 permissions:
   contents: read
